# embedded-hal-mock

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md
.circleci/: config.yml
.github/workflows/: ci.yml
src/: adc.rs  can.rs  common.rs  delay.rs  eh0.rs  eh1.rs  engine.rs  error.rs  i2c.rs  lib.rs  mock.rs  pin.rs  pwm.rs  serial.rs  spi.rs  timer.rs
src/eh0/: adc.rs  delay.rs  digital.rs  error.rs  i2c.rs  pin.rs  pwm.rs  serial.rs  spi.rs  timer.rs
src/eh1/: delay.rs  digital.rs  error.rs  i2c.rs  io.rs  pin.rs  pwm.rs  serial.rs  spi.rs  top_level.rs
