[package]
name = "embedded-hal-mock"
version = "0.9.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
categories = ["embedded", "hardware-support", "development-tools::testing"]
description = "A collection of mocked devices that implement the embedded-hal traits"
documentation = "https://docs.rs/embedded-hal-mock"
keywords = ["hal", "io", "spi", "i2c", "delay"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbrgn/embedded-hal-mock"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2021"
rust-version = "1.60"

[features]
embedded-hal-async = ["dep:embedded-hal-async"]
eh1 = ["dep:eh1", "dep:embedded-hal-nb"]
default = ["eh1"]

[dependencies]
eh1 = { package = "embedded-hal", version = "=1.0.0-alpha.10", optional = true }
embedded-hal-nb = { version = "=1.0.0-alpha.2", optional = true }
embedded-hal-async = { version = "=0.2.0-alpha.1", optional = true }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["rt", "macros"] }
