[package]
name = "embedded-hal-mock"
version = "0.8.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
categories = ["embedded", "hardware-support", "development-tools::testing"]
description = "A collection of mocked devices that implement the embedded-hal traits"
documentation = "https://docs.rs/embedded-hal"
keywords = ["hal", "io", "spi", "i2c", "delay"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbrgn/embedded-hal-mock"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2018"

[features]
embedded-hal-async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = "=1.0.0-alpha.11"
embedded-hal-nb = "=1.0.0-alpha.3"
embedded-hal-async = { version = "=0.2.0-alpha.2", optional = true }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["rt", "macros"] }
