[package]
name = "embedded-hal-mock"
version = "0.10.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
categories = ["embedded", "hardware-support", "development-tools::testing"]
description = "A collection of mocked devices that implement the embedded-hal traits"
documentation = "https://docs.rs/embedded-hal-mock"
keywords = ["hal", "io", "spi", "i2c", "delay"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbrgn/embedded-hal-mock"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2021"
rust-version = "1.63"

[features]
eh0 = ["dep:eh0", "dep:nb"]
eh1 = ["dep:eh1", "dep:embedded-hal-nb"]

embedded-time = ["dep:embedded-time", "dep:void"]
embedded-hal-async = ["dep:embedded-hal-async"]

default = ["eh0", "eh1", "embedded-time"]

[dependencies]
eh0 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"], optional = true }
eh1 = { package = "embedded-hal", version = "1.0", optional = true }
embedded-hal-nb = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
embedded-time = { version = "0.12", optional = true }
nb = { version = "1.1", optional = true }
void = { version = "^1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
